Fixes to align with Material Design spec

--- a/src/frontend/app/shared/components/stepper/steppers/steppers.component.theme.scss
+++ b/src/frontend/app/shared/components/stepper/steppers/steppers.component.theme.scss
@@ -8,8 +8,10 @@
     color: map-get($foreground-colors, base);
     &__header {
       &-icon {
-        background-color: map-get($app-theme, app-background-color);
-        color: map-get($app-theme, app-background-text-color);
+        // background-color: map-get($app-theme, app-background-color);
+        background-color: map-get($foreground-colors, slider-off-active);
+        // color: map-get($app-theme, app-background-text-color);
+        color: mat-contrast($primary, 500);
       }
       &--active {
         .steppers__header-icon {
